# PyWeb20_HW_12

./: README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
src/auth/: models.py  routes.py  schemas.py  service.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: crud.py
src/routes/: contacts.py
src/schemas/: schema.py
